Changes for production